fixed overflow issue on very long categories names

--- a/server/app/assets/stylesheets/categories.scss
+++ b/server/app/assets/stylesheets/categories.scss
@@ -196,7 +196,7 @@
   letter-spacing: 0;
   color: #3f3c70;
   margin: 0;
-  max-width: 100%;
+  max-width: 30ch;
   overflow: hidden;
   text-overflow: ellipsis;
   white-space: nowrap;
